<resources>
    <!--    basic  car rental details-->
    <string name="app_name">Vehicle Rental</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="inspect">Car Image</string>
    <string name="mainA_text">Welcome to you</string>
    <string name="mainA_text2">Vehicle Rental,</string>
    <string name="Login">Login</string>
    <string name="Register">Create An Account</string>
    <string name="have_account">Have an Account? Register Here</string>
    <string name="sign">Sign in to continue</string>
    <string name="log">Already Registered? Login</string>
    <string name="post">Submit</string>
    <string name="car">Car detail</string>
    <string name="header">lets grow together</string>
    <string name="todo">todo</string>
    <string name="android">Android</string>
    <string name="rating">Vehicle Rating</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="rate">Ratings</string>
    <string name="vehicle_type">Type</string>
    <string name="contact">Enter contact number</string>
    <string name="addToList">Add to list</string>
    <string name="dest">Enter the destination</string>
    <string name="source">Enter your location</string>
    <string name="cat">Enter a category</string>
    <string name="days">Enter days </string>
    <string name="pickDate">Double click to pick date</string>

    <!--    registration-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="vehicleName">Vehicle Name</string>


    <!--    menu items names-->
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout_menu">Logout</string>
    <string name="list">List</string>
    <string name="auth">Authentication</string>
    <string name="users">Manage Users</string>

    <!--    navigation-->
    <string name="navigation_open">open Navigation Drawer</string>
    <string name="navigation_close">close Navigation Drawer</string>


    <!--    google map api key-->


</resources>