<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/dashboard_menu"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/list_menu"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/users" />

    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/auth">

            <menu>
                <item
                    android:id="@+id/logout_menu"
                    android:icon="@drawable/ic_baseline_logout_settings_new_24"
                    android:title="@string/logout_menu" />
            </menu>

        </item>


    </group>
</menu>