<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="40dp">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/firebaseImg"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="30dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/logo"
        android:scaleType="centerCrop"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp"
        app:shapeAppearanceOverlay="@style/Circular"
        app:strokeColor="#000"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:letterSpacing="0.2"
        android:textSize="16sp"
        android:text="@string/sign" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/Login1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:letterSpacing="0.2"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:letterSpacing="0.2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/have_account" />


</LinearLayout>


