<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".Index">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationview"
        app:headerLayout="@layout/header"
        app:menu="@menu/adminmenu"
        android:layout_gravity="start"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/toolbar_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleMarginStart="10dp"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/firebaseImg"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/logo"
            android:scaleType="fitXY"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toTopOf="@+id/vehicleName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.543"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="#000"
            app:strokeWidth="1dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:clickable="true"
            android:hint="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/firebaseImg"
            app:layout_constraintEnd_toEndOf="@id/firebaseImg"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/vehicleName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="176dp"
            android:ems="10"
            android:hint="@string/vehicleName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vehicleRating"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/rating"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleName" />

        <EditText
            android:id="@+id/vehicleType"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/vehicle_type"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/contact"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleType" />


        <EditText
            android:id="@+id/indexCategory"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/cat"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/indexbutton"
            android:letterSpacing="0.2"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/car"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleRating" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>