<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="40dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="117dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/firebaseImg"
            android:layout_width="94dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/car"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/black"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.789"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="#000"
            app:strokeWidth="1dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:clickable="true"
            android:hint="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/firebaseImg"
            app:layout_constraintEnd_toEndOf="@id/firebaseImg"
            app:srcCompat="@drawable/ic_baseline_camera_alt_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="6dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="6dp"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="6dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="6dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/register1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:letterSpacing="0.2"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:letterSpacing="0.2"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/log" />


</LinearLayout>


